<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMovie">

    <TextView
        android:id="@+id/title_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="10dp"
        android:text="@string/add_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/id_movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/id_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/add_id"
        android:inputType="textPersonName"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/plot_movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_add" />

    <EditText
        android:id="@+id/plot_movie"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:hint="@string/add_plot_summary"
        android:inputType="textPersonName"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/dur_movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_movie" />

    <EditText
        android:id="@+id/dur_movie"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="9dp"
        android:ems="10"
        android:hint="@string/add_duration"
        android:inputType="textPersonName"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/genre_movie"
        app:layout_constraintEnd_toStartOf="@+id/rat_movie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plot_movie" />

    <EditText
        android:id="@+id/genre_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:ems="10"
        android:hint="@string/add_genre"
        android:inputType="textPersonName"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/release_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dur_movie" />

    <EditText
        android:id="@+id/rat_movie"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginTop="234dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="233dp"
        android:ems="10"
        android:hint="@string/add_rating"
        android:inputType="textPersonName"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/syn_movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dur_movie"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:ems="10"
        android:hint="@string/add_release_date"
        android:inputType="textPersonName"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/syn_movie"
        app:layout_constraintStart_toStartOf="@+id/genre_movie"
        app:layout_constraintTop_toBottomOf="@+id/genre_movie" />

    <EditText
        android:id="@+id/syn_movie"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:hint="@string/add_plot_synopsis"
        android:inputType="textPersonName"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/release_date" />

    <Button
        android:id="@+id/btn_add_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="93dp"
        android:text="@string/btn_add_movie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/syn_movie" />
</androidx.constraintlayout.widget.ConstraintLayout>